populated generator/plugins.go, added v1/plugins.go
